fixed alignment of twitter icon on mobile

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -124,6 +124,7 @@ article {
         line-height: 1.35em;
         margin: 0;
         padding: 0;
+        text-align: left;
       }
 
       .column8 {
