--- a/app/assets/stylesheets/sections/calendar.css.scss
+++ b/app/assets/stylesheets/sections/calendar.css.scss
@@ -9,7 +9,7 @@
         border-bottom: 1px solid $red;
         content: '';
         position: absolute;
-        top: 7%;
+        top: 10%;
         left: 0;
         right: 0;
       }
